HelloParser.js
// Generated from Hello.g4 by ANTLR 4.13.1
// jshint ignore: start
import antlr4 from 'antlr4';
import HelloListener from './HelloListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class HelloParser extends antlr4.Parser {

    static grammarFileName = "Hello.g4";
    static literalNames = [ null, "'='", "'function'", "'('", "','", "')'", 
                            "'['", "']'", "'and'", "'or'", "'+'", "'-'", 
                            "'*'", "'/'", "'**'", "'not'", "'{'", "'}'", 
                            "'while'", "'endwhile'", "'if'", "'else'", "'endif'", 
                            "'do'", "'++'", "'--'", "'return'", "'\"'", 
                            "'>'", "'<'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, "WHILE", "ENDWHILE", "IF", "ELSE", 
                             "ENDIF", "DO", "INCREMENT", "DECREMENT", "RETURN", 
                             "QUOTES", "GREATER", "LESS", "TYPE", "NUMBER", 
                             "ID", "WS" ];
    static ruleNames = [ "program", "stat", "def", "expr", "logical", "additive", 
                         "multiplicative", "unary", "primary", "func", "while", 
                         "if" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = HelloParser.ruleNames;
        this.literalNames = HelloParser.literalNames;
        this.symbolicNames = HelloParser.symbolicNames;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 3:
    	    		return this.expr_sempred(localctx, predIndex);
    	case 4:
    	    		return this.logical_sempred(localctx, predIndex);
    	case 5:
    	    		return this.additive_sempred(localctx, predIndex);
    	case 6:
    	    		return this.multiplicative_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    expr_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 2);
    		case 1:
    			return this.precpred(this._ctx, 1);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    logical_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 2:
    			return this.precpred(this._ctx, 2);
    		case 3:
    			return this.precpred(this._ctx, 1);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    additive_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 4:
    			return this.precpred(this._ctx, 2);
    		case 5:
    			return this.precpred(this._ctx, 1);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    multiplicative_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 6:
    			return this.precpred(this._ctx, 3);
    		case 7:
    			return this.precpred(this._ctx, 2);
    		case 8:
    			return this.precpred(this._ctx, 1);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	program() {
	    let localctx = new ProgramContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, HelloParser.RULE_program);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 28;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(((((_la - 15)) & ~0x1f) === 0 && ((1 << (_la - 15)) & 231467) !== 0)) {
	            this.state = 26;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case 15:
	            case 16:
	            case 18:
	            case 20:
	            case 26:
	            case 31:
	            case 32:
	                this.state = 24;
	                this.stat();
	                break;
	            case 30:
	                this.state = 25;
	                this.def();
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            this.state = 30;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	stat() {
	    let localctx = new StatContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, HelloParser.RULE_stat);
	    try {
	        this.state = 35;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 31;
	            this.match(HelloParser.ID);
	            this.state = 32;
	            this.match(HelloParser.T__0);
	            this.state = 33;
	            this.expr(0);
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 34;
	            this.expr(0);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	def() {
	    let localctx = new DefContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, HelloParser.RULE_def);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 37;
	        this.match(HelloParser.TYPE);
	        this.state = 39;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===2) {
	            this.state = 38;
	            this.match(HelloParser.T__1);
	        }

	        this.state = 41;
	        this.match(HelloParser.ID);
	        this.state = 42;
	        this.match(HelloParser.T__2);
	        this.state = 54;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===30) {
	            this.state = 43;
	            this.match(HelloParser.TYPE);
	            this.state = 44;
	            this.match(HelloParser.ID);
	            this.state = 52;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===1) {
	                this.state = 45;
	                this.match(HelloParser.T__0);
	                this.state = 50;
	                this._errHandler.sync(this);
	                switch(this._input.LA(1)) {
	                case 27:
	                    this.state = 46;
	                    this.match(HelloParser.QUOTES);
	                    this.state = 47;
	                    this.match(HelloParser.ID);
	                    this.state = 48;
	                    this.match(HelloParser.QUOTES);
	                    break;
	                case 31:
	                    this.state = 49;
	                    this.match(HelloParser.NUMBER);
	                    break;
	                default:
	                    throw new antlr4.error.NoViableAltException(this);
	                }
	            }

	        }

	        this.state = 70;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===4) {
	            this.state = 56;
	            this.match(HelloParser.T__3);
	            this.state = 57;
	            this.match(HelloParser.TYPE);
	            this.state = 58;
	            this.match(HelloParser.ID);
	            this.state = 66;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===1) {
	                this.state = 59;
	                this.match(HelloParser.T__0);
	                this.state = 64;
	                this._errHandler.sync(this);
	                switch(this._input.LA(1)) {
	                case 27:
	                    this.state = 60;
	                    this.match(HelloParser.QUOTES);
	                    this.state = 61;
	                    this.match(HelloParser.ID);
	                    this.state = 62;
	                    this.match(HelloParser.QUOTES);
	                    break;
	                case 31:
	                    this.state = 63;
	                    this.match(HelloParser.NUMBER);
	                    break;
	                default:
	                    throw new antlr4.error.NoViableAltException(this);
	                }
	            }

	            this.state = 72;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 73;
	        this.match(HelloParser.T__4);
	        this.state = 74;
	        this.match(HelloParser.T__5);
	        this.state = 78;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(((((_la - 15)) & ~0x1f) === 0 && ((1 << (_la - 15)) & 198699) !== 0)) {
	            this.state = 75;
	            this.stat();
	            this.state = 80;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 81;
	        this.match(HelloParser.T__6);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


	expr(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new ExprContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 6;
	    this.enterRecursionRule(localctx, 6, HelloParser.RULE_expr, _p);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 84;
	        this.logical(0);
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 94;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,12,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                this.state = 92;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,11,this._ctx);
	                switch(la_) {
	                case 1:
	                    localctx = new ExprContext(this, _parentctx, _parentState);
	                    this.pushNewRecursionContext(localctx, _startState, HelloParser.RULE_expr);
	                    this.state = 86;
	                    if (!( this.precpred(this._ctx, 2))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 2)");
	                    }
	                    this.state = 87;
	                    this.match(HelloParser.LESS);
	                    this.state = 88;
	                    this.logical(0);
	                    break;

	                case 2:
	                    localctx = new ExprContext(this, _parentctx, _parentState);
	                    this.pushNewRecursionContext(localctx, _startState, HelloParser.RULE_expr);
	                    this.state = 89;
	                    if (!( this.precpred(this._ctx, 1))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 1)");
	                    }
	                    this.state = 90;
	                    this.match(HelloParser.GREATER);
	                    this.state = 91;
	                    this.logical(0);
	                    break;

	                } 
	            }
	            this.state = 96;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,12,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}


	logical(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new LogicalContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 8;
	    this.enterRecursionRule(localctx, 8, HelloParser.RULE_logical, _p);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 98;
	        this.additive(0);
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 108;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,14,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                this.state = 106;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,13,this._ctx);
	                switch(la_) {
	                case 1:
	                    localctx = new LogicalContext(this, _parentctx, _parentState);
	                    this.pushNewRecursionContext(localctx, _startState, HelloParser.RULE_logical);
	                    this.state = 100;
	                    if (!( this.precpred(this._ctx, 2))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 2)");
	                    }
	                    this.state = 101;
	                    this.match(HelloParser.T__7);
	                    this.state = 102;
	                    this.additive(0);
	                    break;

	                case 2:
	                    localctx = new LogicalContext(this, _parentctx, _parentState);
	                    this.pushNewRecursionContext(localctx, _startState, HelloParser.RULE_logical);
	                    this.state = 103;
	                    if (!( this.precpred(this._ctx, 1))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 1)");
	                    }
	                    this.state = 104;
	                    this.match(HelloParser.T__8);
	                    this.state = 105;
	                    this.additive(0);
	                    break;

	                } 
	            }
	            this.state = 110;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,14,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}


	additive(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new AdditiveContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 10;
	    this.enterRecursionRule(localctx, 10, HelloParser.RULE_additive, _p);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 112;
	        this.multiplicative(0);
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 122;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,16,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                this.state = 120;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,15,this._ctx);
	                switch(la_) {
	                case 1:
	                    localctx = new AdditiveContext(this, _parentctx, _parentState);
	                    this.pushNewRecursionContext(localctx, _startState, HelloParser.RULE_additive);
	                    this.state = 114;
	                    if (!( this.precpred(this._ctx, 2))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 2)");
	                    }
	                    this.state = 115;
	                    this.match(HelloParser.T__9);
	                    this.state = 116;
	                    this.multiplicative(0);
	                    break;

	                case 2:
	                    localctx = new AdditiveContext(this, _parentctx, _parentState);
	                    this.pushNewRecursionContext(localctx, _startState, HelloParser.RULE_additive);
	                    this.state = 117;
	                    if (!( this.precpred(this._ctx, 1))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 1)");
	                    }
	                    this.state = 118;
	                    this.match(HelloParser.T__10);
	                    this.state = 119;
	                    this.multiplicative(0);
	                    break;

	                } 
	            }
	            this.state = 124;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,16,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}


	multiplicative(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new MultiplicativeContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 12;
	    this.enterRecursionRule(localctx, 12, HelloParser.RULE_multiplicative, _p);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 126;
	        this.unary();
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 139;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,18,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                this.state = 137;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,17,this._ctx);
	                switch(la_) {
	                case 1:
	                    localctx = new MultiplicativeContext(this, _parentctx, _parentState);
	                    this.pushNewRecursionContext(localctx, _startState, HelloParser.RULE_multiplicative);
	                    this.state = 128;
	                    if (!( this.precpred(this._ctx, 3))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 3)");
	                    }
	                    this.state = 129;
	                    this.match(HelloParser.T__11);
	                    this.state = 130;
	                    this.unary();
	                    break;

	                case 2:
	                    localctx = new MultiplicativeContext(this, _parentctx, _parentState);
	                    this.pushNewRecursionContext(localctx, _startState, HelloParser.RULE_multiplicative);
	                    this.state = 131;
	                    if (!( this.precpred(this._ctx, 2))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 2)");
	                    }
	                    this.state = 132;
	                    this.match(HelloParser.T__12);
	                    this.state = 133;
	                    this.unary();
	                    break;

	                case 3:
	                    localctx = new MultiplicativeContext(this, _parentctx, _parentState);
	                    this.pushNewRecursionContext(localctx, _startState, HelloParser.RULE_multiplicative);
	                    this.state = 134;
	                    if (!( this.precpred(this._ctx, 1))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 1)");
	                    }
	                    this.state = 135;
	                    this.match(HelloParser.T__13);
	                    this.state = 136;
	                    this.unary();
	                    break;

	                } 
	            }
	            this.state = 141;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,18,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}



	unary() {
	    let localctx = new UnaryContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, HelloParser.RULE_unary);
	    try {
	        this.state = 145;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 16:
	        case 18:
	        case 20:
	        case 26:
	        case 31:
	        case 32:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 142;
	            this.primary();
	            break;
	        case 15:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 143;
	            this.match(HelloParser.T__14);
	            this.state = 144;
	            this.match(HelloParser.ID);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	primary() {
	    let localctx = new PrimaryContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, HelloParser.RULE_primary);
	    var _la = 0;
	    try {
	        this.state = 181;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,23,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 147;
	            this.match(HelloParser.ID);
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 148;
	            this.match(HelloParser.T__15);
	            this.state = 150;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===31) {
	                this.state = 149;
	                this.match(HelloParser.NUMBER);
	            }

	            this.state = 156;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===4) {
	                this.state = 152;
	                this.match(HelloParser.T__3);
	                this.state = 153;
	                this.match(HelloParser.NUMBER);
	                this.state = 158;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 159;
	            this.match(HelloParser.T__16);
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 160;
	            this.match(HelloParser.NUMBER);
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 161;
	            this.match(HelloParser.ID);
	            this.state = 162;
	            this.match(HelloParser.T__5);
	            this.state = 163;
	            this.match(HelloParser.ID);
	            this.state = 164;
	            this.match(HelloParser.T__6);
	            break;

	        case 5:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 165;
	            this.func();
	            break;

	        case 6:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 166;
	            this.while_();
	            break;

	        case 7:
	            this.enterOuterAlt(localctx, 7);
	            this.state = 167;
	            this.if_();
	            break;

	        case 8:
	            this.enterOuterAlt(localctx, 8);
	            this.state = 168;
	            this.match(HelloParser.ID);
	            this.state = 169;
	            _la = this._input.LA(1);
	            if(!(_la===24 || _la===25)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            break;

	        case 9:
	            this.enterOuterAlt(localctx, 9);
	            this.state = 170;
	            this.match(HelloParser.RETURN);
	            this.state = 171;
	            this.match(HelloParser.ID);
	            break;

	        case 10:
	            this.enterOuterAlt(localctx, 10);
	            this.state = 172;
	            this.match(HelloParser.ID);
	            this.state = 173;
	            this.match(HelloParser.T__2);
	            this.state = 178;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case 27:
	                this.state = 174;
	                this.match(HelloParser.QUOTES);
	                this.state = 175;
	                this.match(HelloParser.ID);
	                this.state = 176;
	                this.match(HelloParser.QUOTES);
	                break;
	            case 32:
	                this.state = 177;
	                this.match(HelloParser.ID);
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            this.state = 180;
	            this.match(HelloParser.T__4);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	func() {
	    let localctx = new FuncContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, HelloParser.RULE_func);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 183;
	        this.match(HelloParser.ID);
	        this.state = 184;
	        this.match(HelloParser.T__2);
	        this.state = 185;
	        this.expr(0);
	        this.state = 190;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===4) {
	            this.state = 186;
	            this.match(HelloParser.T__3);
	            this.state = 187;
	            this.expr(0);
	            this.state = 192;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 193;
	        this.match(HelloParser.T__4);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	while_() {
	    let localctx = new WhileContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, HelloParser.RULE_while);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 195;
	        this.match(HelloParser.WHILE);
	        this.state = 196;
	        this.match(HelloParser.T__2);
	        this.state = 197;
	        this.expr(0);
	        this.state = 198;
	        this.match(HelloParser.T__4);
	        this.state = 199;
	        this.match(HelloParser.DO);
	        this.state = 203;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(((((_la - 15)) & ~0x1f) === 0 && ((1 << (_la - 15)) & 198699) !== 0)) {
	            this.state = 200;
	            this.stat();
	            this.state = 205;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 206;
	        this.match(HelloParser.ENDWHILE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	if_() {
	    let localctx = new IfContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, HelloParser.RULE_if);
	    var _la = 0;
	    try {
	        this.state = 239;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,29,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 208;
	            this.match(HelloParser.IF);
	            this.state = 209;
	            this.match(HelloParser.T__2);
	            this.state = 210;
	            this.expr(0);
	            this.state = 211;
	            this.match(HelloParser.T__4);
	            this.state = 212;
	            this.match(HelloParser.DO);
	            this.state = 216;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(((((_la - 15)) & ~0x1f) === 0 && ((1 << (_la - 15)) & 198699) !== 0)) {
	                this.state = 213;
	                this.stat();
	                this.state = 218;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 219;
	            this.match(HelloParser.ENDIF);
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 221;
	            this.match(HelloParser.IF);
	            this.state = 222;
	            this.match(HelloParser.T__2);
	            this.state = 223;
	            this.expr(0);
	            this.state = 224;
	            this.match(HelloParser.T__4);
	            this.state = 225;
	            this.match(HelloParser.DO);
	            this.state = 229;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(((((_la - 15)) & ~0x1f) === 0 && ((1 << (_la - 15)) & 198699) !== 0)) {
	                this.state = 226;
	                this.stat();
	                this.state = 231;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 232;
	            this.match(HelloParser.ELSE);
	            this.state = 236;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,28,this._ctx)
	            while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1) {
	                    this.state = 233;
	                    this.stat(); 
	                }
	                this.state = 238;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,28,this._ctx);
	            }

	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

HelloParser.EOF = antlr4.Token.EOF;
HelloParser.T__0 = 1;
HelloParser.T__1 = 2;
HelloParser.T__2 = 3;
HelloParser.T__3 = 4;
HelloParser.T__4 = 5;
HelloParser.T__5 = 6;
HelloParser.T__6 = 7;
HelloParser.T__7 = 8;
HelloParser.T__8 = 9;
HelloParser.T__9 = 10;
HelloParser.T__10 = 11;
HelloParser.T__11 = 12;
HelloParser.T__12 = 13;
HelloParser.T__13 = 14;
HelloParser.T__14 = 15;
HelloParser.T__15 = 16;
HelloParser.T__16 = 17;
HelloParser.WHILE = 18;
HelloParser.ENDWHILE = 19;
HelloParser.IF = 20;
HelloParser.ELSE = 21;
HelloParser.ENDIF = 22;
HelloParser.DO = 23;
HelloParser.INCREMENT = 24;
HelloParser.DECREMENT = 25;
HelloParser.RETURN = 26;
HelloParser.QUOTES = 27;
HelloParser.GREATER = 28;
HelloParser.LESS = 29;
HelloParser.TYPE = 30;
HelloParser.NUMBER = 31;
HelloParser.ID = 32;
HelloParser.WS = 33;

HelloParser.RULE_program = 0;
HelloParser.RULE_stat = 1;
HelloParser.RULE_def = 2;
HelloParser.RULE_expr = 3;
HelloParser.RULE_logical = 4;
HelloParser.RULE_additive = 5;
HelloParser.RULE_multiplicative = 6;
HelloParser.RULE_unary = 7;
HelloParser.RULE_primary = 8;
HelloParser.RULE_func = 9;
HelloParser.RULE_while = 10;
HelloParser.RULE_if = 11;

class ProgramContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = HelloParser.RULE_program;
    }
